# mqttWss

./: BOOT_AUTO_START_GUIDE.md  BYD_ACCESSIBILITY_GUIDE.md  CHINESE_TTS_GUIDE.md  DOWNLOAD_MODELS.md  GKD：开机启动与无障碍及 UI 文字识别.md  GPSLogger 开机启动及 Android 版本适配详解.md  KITTENTTS_INTEGRATION.md  KITTENTTS_STATUS.md  README.md  RELEASE_GUIDE.md  RELEASE_KEYSTORE_SETUP.md  adb_lock_accessibility.bat  adb_lock_accessibility.sh  adblog.txt  app-v4-voice.7z  build.gradle  create-release.ps1  download_apks.bat  download_models.ps1  gradlew  icon_fix.patch  job_logs.txt  job_logs10.txt  job_logs11.txt  job_logs12.txt  job_logs13.txt  job_logs14.txt  job_logs15.txt  job_logs2.txt  job_logs3.txt  job_logs4.txt  job_logs5.txt  job_logs6.txt  job_logs7.txt  job_logs8.txt  job_logs9.txt  kotlin_temp.7z  optimize_toast_duration.sh  push_to_github.bat  settings.gradle  (+2 more)
.github/workflows/: android-simple.yml  android.yml  create-release.yml  generate-keystore.yml  test-signing.yml
.trae/documents/: fix-ssl-checkbox-setting-fragment-plan.md  fix-ssl-checkbox-visibility-plan.md  fix-subscription-bug.md  privacy-protection-plan.md  publish-history-plan.md  voice-capture-plan.md  ws-wss-support-plan.md
ChineseTtsTflite-0.5.0-release/: AndroidManifest.xml  resources.arsc
ChineseTtsTflite-0.5.0-release/res/: -Y.xml  -c.xml  -o.xml  0N.xml  1M.xml  1N.xml  23.xml  30.xml  38.xml  3c.xml  3h.xml  3i.xml  43.xml  4G.xml  4W.xml  5A.xml  6J.xml  75.xml  7W.xml  8_.xml  99.xml  9A.xml  9e.xml  AK.xml  AP.xml  (+114 more)
app/: build.gradle  proguard-rules.pro
app/src/full/cpp/: CMakeLists.txt  native-lib.cpp
(+217 files in other folders)
